java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting6/EnumConstantWithoutInterfaceImplementation.java

interface A {
  void m();
}

enum E implements A {
  <error descr="Enum constant 'F' must implement abstract method 'm()' in 'A'">F</error>() {};
}